# Svelte-Vite-Kucoin-trading-app

./: index.html  jsconfig.json  package-lock.json  package.json  svelte.config.js  todo  tsconfig.json  vite.config.js
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Form/: MultiSelect.svelte
src/config/: kucoin.js
src/helpers/: Notifications.js  Store.js  helpers.js  tooltip.js  trading.js
src/lib/Layout/: GlobalSettings.svelte  HeaderButtons.svelte
src/pages/: PageSelector.svelte
src/pages/Terminal/: Terminal.svelte  terminal.d.ts  terminal.fn.js
src/pages/Terminal/parts/: Chart.svelte  OrderBook.svelte  OrderForm.svelte  OrderList.svelte  PairSelect.svelte  RecentTrades.svelte
src/sass/: styles.scss  variables.scss
src/sass/components/: Button.scss  Modal.scss
src/sass/components/Form/: Form.scss  Input.scss
src/sass/tippy/: themes.scss
src/sass/tooltips/: notyf.scss
src/state/: global_state.js  settings_state.js  state.d.ts  tabs_state.js
